fix: Spacing on get started layout

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,9 +1,3 @@
-.line {
-  border-bottom: 4px solid var(--color-brand-800);
-  width: 50px;
-  margin: 3rem auto 0;
-}
-
 .intro {
   display: flex;
   justify-content: space-between;
@@ -46,4 +40,8 @@
   margin-top: 0rem;
   margin-bottom: 1rem;
   font-size: 2.5rem;
+}
+
+.gettingStartedHeading {
+  margin-bottom: 4rem;
 }
